-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
I've seen this locally with racer few times:
LustreError: 6328:0:(osc_cache.c:2835:osc_cache_truncate_start()) extent 000000005852b92d@{[0 -> 255/255], [3|0|+|trunc|wihY|0000000076bdfb78], [1703936|1|+|-|0000000051721465|256| (null)]}
LustreError: 6328:0:(osc_cache.c:2835:osc_cache_truncate_start()) ### extent: 000000005852b92d ns: lustre-OST0000-osc-ffff88015d990000 lock: 0000000051721465/0xdf3794bb27bc268c lrc: 4/0,0 mode: PW/PW res: [0x581:0x0:0x0].0x0 rrc: 3 type: EXT [0->18446744073709551615] (req 0->18446744073709551615) flags: 0x80042f480020000 nid: local remote: 0xdf3794bb27bc26b6 expref: -99 pid: 14124 timeout: 0 lvb_type: 1
LustreError: 6328:0:(osc_cache.c:1242:osc_extent_tree_dump0()) Dump object 0000000076bdfb78 extents at osc_cache_truncate_start:2835, mppr: 256.
LustreError: 6328:0:(osc_cache.c:1248:osc_extent_tree_dump0()) extent 000000005852b92d@{[0 -> 255/255], [3|0|+|trunc|wihY|0000000076bdfb78], [1703936|1|+|+|0000000051721465|256| (null)]} in tree 1.
LustreError: 6328:0:(osc_cache.c:1248:osc_extent_tree_dump0()) ### extent: 000000005852b92d ns: lustre-OST0000-osc-ffff88015d990000 lock: 0000000051721465/0xdf3794bb27bc268c lrc: 4/0,0 mode: PW/PW res: [0x581:0x0:0x0].0x0 rrc: 3 type: EXT [0->18446744073709551615] (req 0->18446744073709551615) flags: 0x80042f480020000 nid: local remote: 0xdf3794bb27bc26b6 expref: -99 pid: 14124 timeout: 0 lvb_type: 1
LustreError: 6328:0:(osc_cache.c:1252:osc_extent_tree_dump0()) extent 000000005852b92d@{[0 -> 255/255], [3|0|+|trunc|wihY|0000000076bdfb78], [1703936|1|+|+|0000000051721465|256| (null)]} hp 1.
LustreError: 6328:0:(osc_cache.c:1252:osc_extent_tree_dump0()) ### extent: 000000005852b92d ns: lustre-OST0000-osc-ffff88015d990000 lock: 0000000051721465/0xdf3794bb27bc268c lrc: 4/0,0 mode: PW/PW res: [0x581:0x0:0x0].0x0 rrc: 3 type: EXT [0->18446744073709551615] (req 0->18446744073709551615) flags: 0x80042f480020000 nid: local remote: 0xdf3794bb27bc26b6 expref: -99 pid: 14124 timeout: 0 lvb_type: 1
LustreError: 6328:0:(osc_cache.c:2835:osc_cache_truncate_start()) ASSERTION( !ext->oe_hp && !ext->oe_urgent ) failed:
LustreError: 6328:0:(osc_cache.c:2835:osc_cache_truncate_start()) LBUG
Pid: 6328, comm: ll_imp_inval 4.18.0 #4 SMP Mon Jan 13 21:43:11 MSK 2020
Call Trace:
libcfs_call_trace+0x76/0xa0 [libcfs]
lbug_with_loc+0x43/0x80 [libcfs]
0xffffffffffffffff
BUG: sleeping function called from invalid context at kernel/locking/mutex.c:748
in_atomic(): 1, irqs_disabled(): 0, pid: 6328, name: ll_imp_inval
INFO: lockdep is turned off.
CPU: 1 PID: 6328 Comm: ll_imp_inval Tainted: P W O X --------- --- 4.18.0 #4
Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
Call Trace:
dump_stack+0x85/0xc0
___might_sleep.cold+0xac/0xbc
? __mutex_lock+0x52/0x940
? libcfs_debug_dumplog+0x25/0xe0 [libcfs]
? printk+0x48/0x4a
? libcfs_debug_dumplog+0x25/0xe0 [libcfs]
? libcfs_debug_dumplog+0x25/0xe0 [libcfs]
? lbug_with_loc+0x56/0x80 [libcfs]
? osc_cache_truncate_start+0x101c/0x2670 [osc]
? finish_wait+0x3d/0x70
? osc_object_invalidate+0x64/0x1d0 [osc]
? wait_woken+0x90/0x90
? osc_ldlm_resource_invalidate+0xc8/0x170 [osc]
? cfs_hash_for_each_relax+0x251/0x430 [libcfs]
? osc_disconnect+0x80/0x80 [osc]
? osc_disconnect+0x80/0x80 [osc]
? cfs_hash_for_each_nolock+0x12c/0x1c0 [libcfs]
? osc_import_event+0x73d/0xf40 [osc]
? ptlrpc_invalidate_import+0x32c/0x990 [ptlrpc]
? wait_woken+0x90/0x90
? ptlrpc_invalidate_import_thread+0x3e/0x1c0 [ptlrpc]
? kthread+0x105/0x140
? ptlrpc_import_recovery_state_machine+0x960/0x960 [ptlrpc]
? kthread_flush_work_fn+0x10/0x10
? ret_from_fork+0x24/0x30